// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots helpers|useExpandable as default 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c37 .c5 {
  font-size: 1.5em;
}

.c38 .c5 {
  font-size: 1.5em;
}

.c9 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
}

.c9:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c9:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c9:active,
.c9.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c9:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c9[disabled] {
  pointer-events: none;
}

.c9[disabled]:after {
  display: block;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  padding-top: 0.625em;
  padding-bottom: 0.625em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c40 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c41 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c2:hover,
.c2:focus {
  background-color: #eee;
}

.c3 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c42 .c5 {
  pointer-events: none;
}

.c43 .c5 {
  pointer-events: none;
}

.c1 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c44 .c8 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <div
      className="c1"
      onScroll={[Function]}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 800,
          "overflow": "auto",
          "position": "relative",
          "width": 600,
          "willChange": "transform",
        }
      }
    >
      <ul
        style={
          Object {
            "height": 8000,
            "pointerEvents": "",
            "width": "100%",
          }
        }
      >
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Ayden
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 80,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Larue
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 160,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Helena
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 240,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Margaret
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 320,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Vernie
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 400,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Hannah
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 480,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Kaci
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 560,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Clinton
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 640,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Mathew
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 720,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Edythe
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 800,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Emerson
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 880,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Bryce
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 960,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Marques
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots helpers|useExpandable with expandedKeys 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  position: relative;
  height: 1em;
  line-height: 1em;
  text-transform: none;
  top: 0px;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c37 .c5 {
  font-size: 1.5em;
}

.c38 .c5 {
  font-size: 1.5em;
}

.c39 .c5 {
  font-size: 1.5em;
}

.c10 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
}

.c10:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c10:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c10:active,
.c10.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c10:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c10[disabled] {
  pointer-events: none;
}

.c10[disabled]:after {
  display: block;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
  background-color: transparent;
  color: #999;
  box-shadow: 0 0 0 1px #999;
}

.c9:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c9:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c9:active,
.c9.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c9:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c9[disabled] {
  pointer-events: none;
}

.c9[disabled]:after {
  display: block;
}

.c9:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c9:focus {
  box-shadow: 0 0 0 1px #999, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c4 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  padding-top: 0.625em;
  padding-bottom: 0.625em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c40 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c41 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c42 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c2:hover,
.c2:focus {
  background-color: #eee;
}

.c3 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c43 .c5 {
  pointer-events: none;
}

.c44 .c5 {
  pointer-events: none;
}

.c1 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c45 .c8 {
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <div
      className="c1"
      onScroll={[Function]}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 800,
          "overflow": "auto",
          "position": "relative",
          "width": 600,
          "willChange": "transform",
        }
      }
    >
      <ul
        style={
          Object {
            "height": 8480,
            "pointerEvents": "",
            "width": "100%",
          }
        }
      >
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Ayden
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Collapse all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 80,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  |  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Shaun
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Collapse all children
                </button>
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Collapse all parents
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 160,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  |  ---  |  ---  
                |---
                 Lola
              </div>
              <div
                className="c7"
                direction="row"
              />
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 240,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  |  ---  |  ---  
                |---
                 Travis
              </div>
              <div
                className="c7"
                direction="row"
              />
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 320,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  |  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Kyle
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Collapse all children
                </button>
                <button
                  className="c8 c9"
                  onClick={[Function]}
                >
                  Collapse all parents
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 400,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  |  ---  |  ---  
                |---
                 Jaeden
              </div>
              <div
                className="c7"
                direction="row"
              />
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 480,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  |  ---  |  ---  
                |---
                 Yadira
              </div>
              <div
                className="c7"
                direction="row"
              />
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 560,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Larue
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c10"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 640,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Helena
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c10"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 720,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Margaret
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c10"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 800,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Vernie
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c10"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 880,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Hannah
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c10"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          data-test="list-item"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 960,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
              direction="row"
              height="100%"
            >
              <div
                className=""
              >
                  ---  
                <button
                  onClick={[Function]}
                >
                  <span
                    className="c5 c6"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                 Kaci
              </div>
              <div
                className="c7"
                direction="row"
              >
                <button
                  className="c8 c10"
                  onClick={[Function]}
                >
                  Expand all children
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
